Written most of readme

--- a/data/index.html
+++ b/data/index.html
@@ -59,7 +59,7 @@
 </head>
 
 <body>
-    <h1>ESP32 Web Server</h1>
+    <h1>Korsar</h1>
     <!--<a class="button button-on" href="/i2c/scan">I2C Scan</a>-->
     <a class="button button-on" href="/i2c/terminal">I2C Terminal</a>
     <!-- <a class="button button-on" href="/i2c/eeprom">I2C EEPROM tool</a> -->
