--- a/data/i2c_terminal.html
+++ b/data/i2c_terminal.html
@@ -139,6 +139,12 @@
                 <option value="400000">400000 Hz</option>
             </select>
             <input class="inflex-text-input" id="address_input" placeholder="Device address" list="devices">
+            <!-- <div class="inflex-text-input" style="display: flex;flex-direction: row;padding:0 !important;width: calc(100%);">
+                <input placeholder="Device address" list="devices" id="address_input" style="min-width: 0;text-decoration: none;font-size: 25px;cursor: pointer;border: none;height: 100%;width: 100%;padding: 13px 30px;border-radius: 4px;" type="text">
+                <div style="margin-left: 5px;font-size: 16px;padding-right: 10px;padding-top: 10px;color: black;">
+                    Hex
+                </div>
+            </div> -->
             <datalist id="devices">
             </datalist>
             <a class="inflex-button span-bottom" id="probe_btn">Probe</a>
