--- a/data/i2c_terminal.html
+++ b/data/i2c_terminal.html
@@ -68,6 +68,39 @@
             border-radius: 4px;
         }
 
+        .inflex-text-input-box {
+            border: solid 1px gray;
+            text-decoration: none;
+            font-size: 25px;
+            margin: 0px auto 35px;
+            cursor: pointer;
+            border-radius: 4px;
+            display: flex;
+            flex-direction: row;
+            padding: 0 !important;
+            width: calc(100%);
+        }
+
+        .inflex-text-subinput {
+            min-width: 0;
+            text-decoration: none;
+            font-size: 25px;
+            cursor: pointer;
+            border: none;
+            height: 100%;
+            width: 100%;
+            padding: 13px 30px;
+            border-radius: 4px;
+        }
+
+        .inflex-input-unit {
+            margin-left: 5px;
+            font-size: 16px;
+            padding-right: 10px;
+            padding-top: 10px;
+            color: black;
+        }
+
         .inflex-select {
             display: block;
             width: 100%;
@@ -138,26 +171,47 @@
                 <option value="100000">100000 Hz</option>
                 <option value="400000">400000 Hz</option>
             </select>
-            <input class="inflex-text-input" id="address_input" placeholder="Device address" list="devices">
-            <!-- <div class="inflex-text-input" style="display: flex;flex-direction: row;padding:0 !important;width: calc(100%);">
-                <input placeholder="Device address" list="devices" id="address_input" style="min-width: 0;text-decoration: none;font-size: 25px;cursor: pointer;border: none;height: 100%;width: 100%;padding: 13px 30px;border-radius: 4px;" type="text">
-                <div style="margin-left: 5px;font-size: 16px;padding-right: 10px;padding-top: 10px;color: black;">
+            <div class="inflex-text-input-box">
+                <input class="inflex-text-subinput" placeholder="Device address" list="devices" id="address_input">
+                <div class="inflex-input-unit">
                     Hex
                 </div>
-            </div> -->
+            </div>
             <datalist id="devices">
             </datalist>
             <a class="inflex-button span-bottom" id="probe_btn">Probe</a>
             <a class="inflex-button" id="scan_btn">Scan</a>
         </div>
         <div class="fb-element">
-            <input class="inflex-text-input" id="register_input_read" placeholder="Register address">
-            <input class="inflex-text-input" id="number_input" placeholder="Byte number">
+            <div class="inflex-text-input-box">
+                <input class="inflex-text-subinput" placeholder="Register address"
+                    id="register_input_read">
+                <div class="inflex-input-unit">
+                    Hex
+                </div>
+            </div>
+            <div class="inflex-text-input-box">
+                <input class="inflex-text-subinput" placeholder="Byte number" id="number_input">
+                <div class="inflex-input-unit">
+                    Dec
+                </div>
+            </div>
             <a class="inflex-button" id="read_btn">Read</a>
         </div>
         <div class="fb-element">
-            <input class="inflex-text-input" id="register_input_write" placeholder="Register address (optional)">
-            <input class="inflex-text-input" id="write_input" placeholder="Value as hex number(s)">
+            <div class="inflex-text-input-box">
+                <input class="inflex-text-subinput" placeholder="Register address (optional)"
+                    id="register_input_write">
+                <div class="inflex-input-unit">
+                    Hex
+                </div>
+            </div>
+            <div class="inflex-text-input-box">
+                <input class="inflex-text-subinput" placeholder="Value as hex number(s)" id="write_input">
+                <div class="inflex-input-unit">
+                    [Hex]
+                </div>
+            </div>
             <a class="inflex-button" id="write_btn">Write</a>
         </div>
     </div>
