--- a/data/spi_terminal.html
+++ b/data/spi_terminal.html
@@ -4,238 +4,61 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>SPI Terminal</title>
-    <style>
-        html {
-            font-family: Helvetica;
-            display: inline-block;
-            margin: 0px auto;
-            text-align: center;
-        }
-
-        body {
-            margin-top: 50px;
-        }
-
-        h1 {
-            color: #444444;
-            margin: 50px auto 30px;
-        }
-
-        h3 {
-            color: #444444;
-            margin-bottom: 25px;
-        }
-
-        .button {
-            display: block;
-            min-width: 120px;
-            width: 70vw;
-            max-width: 300px;
-            background-color: #3498db;
-            border: none;
-            color: white;
-            padding: 13px 30px;
-            text-decoration: none;
-            font-size: 25px;
-            margin: 0px auto 35px;
-            cursor: pointer;
-            border-radius: 4px;
-        }
-
-        .inflex-button {
-            display: block;
-            width: calc(100% - 60px);
-            ;
-            background-color: #3498db;
-            border: none;
-            color: white;
-            padding: 13px 30px;
-            text-decoration: none;
-            font-size: 25px;
-            margin: 0px auto 0;
-            cursor: pointer;
-            border-radius: 4px;
-        }
-
-        .text-input {
-            display: block;
-            min-width: 120px;
-            width: 70vw;
-            max-width: 300px;
-            border: solid 1px gray;
-            padding: 13px 30px;
-            text-decoration: none;
-            font-size: 25px;
-            margin: 0px auto 35px;
-            cursor: pointer;
-            border-radius: 4px;
-        }
-
-        .inflex-text-input {
-            display: block;
-            width: calc(100% - 60px);
-            border: solid 1px gray;
-            padding: 13px 30px;
-            text-decoration: none;
-            font-size: 25px;
-            margin: 0px auto 35px;
-            cursor: pointer;
-            border-radius: 4px;
-        }
-
-        .inflex-text-input-box {
-            border: solid 1px gray;
-            text-decoration: none;
-            font-size: 25px;
-            margin: 0px auto 35px;
-            cursor: pointer;
-            border-radius: 4px;
-            display: flex;
-            flex-direction: row;
-            padding: 0 !important;
-            width: calc(100%);
-        }
-
-        .inflex-text-subinput {
-            min-width: 0;
-            text-decoration: none;
-            font-size: 25px;
-            cursor: pointer;
-            border: none;
-            height: 100%;
-            width: 100%;
-            padding: 13px 30px;
-            border-radius: 4px;
-        }
-
-        .inflex-input-unit {
-            margin-left: 5px;
-            font-size: 16px;
-            padding-right: 10px;
-            padding-top: 10px;
-            color: black;
-        }
-
-        .inflex-select {
-            display: block;
-            width: 100%;
-            border: solid 1px gray;
-            padding: 13px 30px;
-            text-decoration: none;
-            font-size: 25px;
-            cursor: pointer;
-            border-radius: 4px;
-            background-color: white;
-        }
-
-        .button-on {
-            background-color: #3498db;
-        }
-
-        .button-on:active {
-            background-color: #2980b9;
-        }
-
-        p {
-            font-size: 14px;
-            color: #888;
-            margin-bottom: 10px;
-        }
-
-        .output-console {
-            min-width: 200px;
-            width: 80vw;
-            max-width: 95vw;
-            height: 500px;
-            font-size: 18px
-        }
-
-        .span-bottom {
-            margin-bottom: 35px;
-        }
-
-        .fb-element {
-            padding: 15px;
-            border: 1px solid #3498db;
-            border-radius: 4px;
-            margin-bottom: 35px;
-        }
-
-        @media (max-width: 645px) {
-            .fb-element {
-                width: 90%;
-            }
-        }
-
-        @media (min-width: 645px) and (max-width: 984px) {
-            .fb-element {
-                width: 45%;
-            }
-        }
-
-        @media (min-width: 985px) {
-            .fb-element {
-                width: 29%;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="/css/pico.min.css">
 </head>
 
 <body>
-    <h1>SPI Terminal</h1>
-    <a class="button button-on" href="/">Back</a>
-    <div style="display: flex;justify-content: space-around;flex-wrap: wrap;">
-        <div class="fb-element">
-            <div class="inflex-text-input-box">
-                <input class="inflex-text-subinput" placeholder="Frequency" id="spi_frequency_input" value="2000000">
-                <div class="inflex-input-unit">
-                    Dec
-                </div>
-            </div>
-            <select class="inflex-select span-bottom" name="Bit order" id="spi_order_input">
-                <option value="0">LSB</option>
-                <option value="1" selected>MSB</option>
-            </select>
-            <select class="inflex-select" name="Mode" id="spi_mode_input">
-                <option value="0" selected>SPI Mode 0</option>
-                <option value="1">SPI Mode 1</option>
-                <option value="2">SPI Mode 2</option>
-                <option value="3">SPI Mode 3</option>
-            </select>
+    <header class="container">
+        <h1>SPI Terminal</h1>
+        <a role="button" href="/">Back</a>
+    </header>
+    <main class="container">
+        <div class="grid">
+            <article>
+                <fieldset role="group">
+                    <input placeholder="Frequency" id="spi_frequency_input"
+                        value="2000000">
+                    <input type="button" value="Dec" />
+                </fieldset>
+                <select name="Bit order" id="spi_order_input">
+                    <option value="0">LSB</option>
+                    <option value="1" selected>MSB</option>
+                </select>
+                <select name="Mode" id="spi_mode_input">
+                    <option value="0" selected>SPI Mode 0</option>
+                    <option value="1">SPI Mode 1</option>
+                    <option value="2">SPI Mode 2</option>
+                    <option value="3">SPI Mode 3</option>
+                </select>
+            </article>
+            <article>
+                <fieldset role="group">
+                    <input placeholder="Value as hex number(s)" id="write_input">
+                    <input type="button" value="[Hex]" />
+                </fieldset>
+                <button id="write_btn">Write</button>
+            </article>
+            <article>
+                <fieldset role="group">
+                    <input placeholder="Value as hex number(s)" id="write_read_input">
+                    <input type="button" value="[Hex]" />
+                </fieldset>
+                <fieldset role="group">
+                    <input placeholder="Number of bytes" id="bytes_number_input">
+                    <input type="button" value="Dec" />
+                </fieldset>
+                <fieldset role="group">
+                    <input placeholder="Placeholder byte" id="bytes_number_input">
+                    <input type="button" value="Dec" />
+                </fieldset>
+                <button id="write_read_btn">Write&Read</button>
+            </article>
         </div>
-        <div class="fb-element">
-            <div class="inflex-text-input-box">
-                <input class="inflex-text-subinput" placeholder="Value as hex number(s)" id="write_input">
-                <div class="inflex-input-unit">
-                    [Hex]
-                </div>
-            </div>
-            <a class="inflex-button button-on" id="write_btn">Write</a>
-        </div>
-        <div class="fb-element">
-            <div class="inflex-text-input-box">
-                <input class="inflex-text-subinput" placeholder="Value as hex number(s)" id="write_read_input">
-                <div class="inflex-input-unit">
-                    [Hex]
-                </div>
-            </div>
-            <div class="inflex-text-input-box">
-                <input class="inflex-text-subinput" placeholder="Number of bytes" id="bytes_number_input">
-                <div class="inflex-input-unit">
-                    Dec
-                </div>
-            </div>
-            <div class="inflex-text-input-box">
-                <input class="inflex-text-subinput" placeholder="Placeholder byte" id="bytes_number_input">
-                <div class="inflex-input-unit">
-                    Dec
-                </div>
-            </div>
-            <a class="inflex-button button-on" id="write_read_btn">Write&Read</a>
-        </div>
-    </div>
-    <h3>Console</h3>
-    <textarea id="output" class="output-console" readonly></textarea>
+    </main>
+    <footer class="container">
+        <h3>Console</h3>
+        <textarea id="output" name="read-only" readonly style="min-height: 500px;"></textarea>
+    </footer>
     <script src="/js/protobuf.min.js"></script>
     <script src="/js/lib/utils.js"></script>
     <script src="/js/lib/pb.js"></script>
