Added sh1106 page

--- a/data/i2c_terminal.html
+++ b/data/i2c_terminal.html
@@ -61,7 +61,7 @@
     <script src="/js/lib/utils.js"></script>
     <script src="/js/lib/pb.js"></script>
     <script src="/js/lib/i2c.js"></script>
-    <script defer>
+    <script>
         let bus;
         window.addEventListener('load', async (event) => {
             bus = await openI2CPromisified();
