--- a/data/index.html
+++ b/data/index.html
@@ -17,9 +17,11 @@
             <button type="submit">I2C Terminal</button>
         </form>
         <!-- <a role="button" href="/i2c/eeprom">I2C EEPROM tool</a> -->
-        <!-- <a role="button" href="/i2c/sh1106">SH1106 Tester</a> -->
         <form action="/spi/terminal">
             <button type="submit">SPI Terminal</button>
+        </form>
+        <form action="/i2c/sh1106">
+            <button type="submit">SH1106 Tester</button>
         </form>
         <!-- <a role="button" href="/">Servo</a> -->
         <!-- <a role="button" href="/">Voltage meter (ADC)</a> -->
